Ass-1/getting_started/test_files/syntax_errors/InvalidMethodDeclaration.cpm
class MyClass {
    volatile testMethod(): int { //@error - syntax (illegal access modifier)
        return 1
    }
}

main() : int {
  print(MyClass().testMethod())
  return 0
}